// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tab-web-platform shared/Nav Logged In 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <nav
        class="w-full border-b border-gray-2 text-blue-gray font-body text-md md:text-sm font-regular underline-offset-2 mx-auto max-w-7xl"
        data-headlessui-state=""
      >
        <div
          class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
        >
          <div
            class="flex h-16 justify-between"
          >
            <div
              class="flex"
            >
              <div
                class="flex flex-shrink-0 items-center"
              >
                <img
                  alt="Tap3d"
                  class="w-8 h-8"
                  data-nimg="1"
                  decoding="async"
                  height="32"
                  loading="lazy"
                  src="/tap_reskin.svg"
                  style="color: transparent;"
                  width="32"
                />
              </div>
              <div
                class="hidden sm:-my-px sm:ml-6 sm:flex font-bold"
              >
                <a
                  aria-current="page"
                  class="inline-flex items-center p-8 border-b-2 text-h-xs font-medium border-blue-0 text-dark-primary"
                  href="/courses"
                >
                  Courses
                </a>
                <a
                  class="inline-flex items-center p-8 border-b-2 text-h-xs font-medium border-transparent hover:border-gray-3 text-dark-tertiary"
                  href="/my-progress"
                >
                  My Progress
                </a>
              </div>
            </div>
            <div
              class="hidden sm:ml-6 sm:flex sm:items-center"
            >
              <div
                class="relative ml-3"
                data-headlessui-state=""
              >
                <div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="flex max-w-xs items-center rounded-full text-sm text-dark-primary"
                    data-headlessui-state=""
                    id="headlessui-menu-button-mock-id"
                    type="button"
                  >
                    <span
                      class=""
                    >
                      John Doe
                    </span>
                  </button>
                </div>
                <div
                  data-mocked-component="Transition"
                />
              </div>
            </div>
            <div
              class="-mr-2 flex items-center sm:hidden"
            >
              <button
                aria-expanded="false"
                class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-4 hover:bg-gray-1 hover:text-gray-5"
                data-headlessui-state=""
                id="headlessui-disclosure-button-mock-id"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="block h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="w-full border-b border-gray-2 text-blue-gray font-body text-md md:text-sm font-regular underline-offset-2 mx-auto max-w-7xl"
      data-headlessui-state=""
    >
      <div
        class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex h-16 justify-between"
        >
          <div
            class="flex"
          >
            <div
              class="flex flex-shrink-0 items-center"
            >
              <img
                alt="Tap3d"
                class="w-8 h-8"
                data-nimg="1"
                decoding="async"
                height="32"
                loading="lazy"
                src="/tap_reskin.svg"
                style="color: transparent;"
                width="32"
              />
            </div>
            <div
              class="hidden sm:-my-px sm:ml-6 sm:flex font-bold"
            >
              <a
                aria-current="page"
                class="inline-flex items-center p-8 border-b-2 text-h-xs font-medium border-blue-0 text-dark-primary"
                href="/courses"
              >
                Courses
              </a>
              <a
                class="inline-flex items-center p-8 border-b-2 text-h-xs font-medium border-transparent hover:border-gray-3 text-dark-tertiary"
                href="/my-progress"
              >
                My Progress
              </a>
            </div>
          </div>
          <div
            class="hidden sm:ml-6 sm:flex sm:items-center"
          >
            <div
              class="relative ml-3"
              data-headlessui-state=""
            >
              <div>
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="flex max-w-xs items-center rounded-full text-sm text-dark-primary"
                  data-headlessui-state=""
                  id="headlessui-menu-button-mock-id"
                  type="button"
                >
                  <span
                    class=""
                  >
                    John Doe
                  </span>
                </button>
              </div>
              <div
                data-mocked-component="Transition"
              />
            </div>
          </div>
          <div
            class="-mr-2 flex items-center sm:hidden"
          >
            <button
              aria-expanded="false"
              class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-4 hover:bg-gray-1 hover:text-gray-5"
              data-headlessui-state=""
              id="headlessui-disclosure-button-mock-id"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="block h-6 w-6"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/Nav Not Logged In 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <nav
        class="w-full border-b border-gray-2 text-blue-gray font-body text-md md:text-sm font-regular underline-offset-2 mx-auto max-w-7xl"
        data-headlessui-state=""
      >
        <div
          class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
        >
          <div
            class="flex h-16 justify-between"
          >
            <div
              class="flex"
            >
              <div
                class="flex flex-shrink-0 items-center"
              >
                <img
                  alt="Tap3d"
                  class="w-8 h-8"
                  data-nimg="1"
                  decoding="async"
                  height="32"
                  loading="lazy"
                  src="/tap_reskin.svg"
                  style="color: transparent;"
                  width="32"
                />
              </div>
              <div
                class="hidden sm:-my-px sm:ml-6 sm:flex font-bold"
              >
                <a
                  aria-current="page"
                  class="inline-flex items-center p-8 border-b-2 text-h-xs font-medium border-blue-0 text-dark-primary"
                  href="/courses"
                >
                  Courses
                </a>
                <a
                  class="inline-flex items-center p-8 border-b-2 text-h-xs font-medium border-transparent hover:border-gray-3 text-dark-tertiary"
                  href="/my-progress"
                >
                  My Progress
                </a>
              </div>
            </div>
            <div
              class="-mr-2 flex items-center sm:hidden"
            >
              <button
                aria-expanded="false"
                class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-4 hover:bg-gray-1 hover:text-gray-5"
                data-headlessui-state=""
                id="headlessui-disclosure-button-mock-id"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="block h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="w-full border-b border-gray-2 text-blue-gray font-body text-md md:text-sm font-regular underline-offset-2 mx-auto max-w-7xl"
      data-headlessui-state=""
    >
      <div
        class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex h-16 justify-between"
        >
          <div
            class="flex"
          >
            <div
              class="flex flex-shrink-0 items-center"
            >
              <img
                alt="Tap3d"
                class="w-8 h-8"
                data-nimg="1"
                decoding="async"
                height="32"
                loading="lazy"
                src="/tap_reskin.svg"
                style="color: transparent;"
                width="32"
              />
            </div>
            <div
              class="hidden sm:-my-px sm:ml-6 sm:flex font-bold"
            >
              <a
                aria-current="page"
                class="inline-flex items-center p-8 border-b-2 text-h-xs font-medium border-blue-0 text-dark-primary"
                href="/courses"
              >
                Courses
              </a>
              <a
                class="inline-flex items-center p-8 border-b-2 text-h-xs font-medium border-transparent hover:border-gray-3 text-dark-tertiary"
                href="/my-progress"
              >
                My Progress
              </a>
            </div>
          </div>
          <div
            class="-mr-2 flex items-center sm:hidden"
          >
            <button
              aria-expanded="false"
              class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-4 hover:bg-gray-1 hover:text-gray-5"
              data-headlessui-state=""
              id="headlessui-disclosure-button-mock-id"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="block h-6 w-6"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
